2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Minor Travis CI update

2017-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.3

	* inst/include/RApiDatetime.h: Remove two spurious variable uses

2017-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version and date

	* NAMESPACE: Also enable registration in useDynLib, explicitly export
	six R-level functions

2017-03-26  Dirk Eddelbuettel  <edd@debian.org>

        * LICENSE: Added to repository
        * .Rbuildignore: Do not include LICENSE in package

2017-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.2

	* README.md: Add Installation note, fix typo

	* inst/NEWS.Rd: Added

2017-03-25  Joshua Ulrich  <josh.m.ulrich@gmail.com>

	* src/datetime.c: Bugfix; now works on Windows
	* DESCRIPTION (OS_type): Remove restriction

2017-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.1

	* DESCRIPTION (OS_type): At least for now, unix only

2017-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* R/datetime.R: Add examples to all functions
	* man/rapistrptime.Rd: Ditto

	* src/datetime.c (asPOSIXlt): Bugfix

	* tests/test.R: Also call rapiAsPOSIXlt()

	* .travis.yml: Add Travis CI support
	* .codecov.yml: Add CodeCov support

2017-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c: Expanded registration to six functions
	* inst/include/RApiDatetime.h: Expanded export to six functions

	* src/Rstrptime.h: Updated relative to R sources

	* R/datetime.R (rapiAsPOSIXlt, rapiFormatPOSIXlt, rapiPOSIXlt2D)
	(rapiD2POSIXlt): Additional entry points, expanded documentation
	* man/rapistrptime: Expanded documentation

	* tests/test.R: Expanded as well

2017-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c: Updated relative to R sources (needs another pass)
	* src/datetime.h: Updated relative to R sources
