@@ -1,8 +1,8 @@
 Package: RApiDatetime
 Type: Package
 Title: R API Datetime
-Version: 0.0.3
-Date: 2017-04-02
+Version: 0.0.3.1
+Date: 2018-14-20
 Author: Dirk Eddelbuettel and R Core (original code)
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Access to the C-level R date and datetime code is provided for
