@@ -3,6 +3,13 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/rapidatetime/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/rapidatetime/issues/#1}{##1}}
 
+\section{Changes in RApiDatetime version 0.0.4 (2018-xx-yy)}{
+  \itemize{
+    \item New function \code{asDatePOSIXct} (Josh Ulrich in \ghpr{2})
+    \item Synchronized with upstream code in base R (Dirk in \ghpr{3})
+  }
+}
+
 \section{Changes in RApiDatetime version 0.0.3 (2017-04-02)}{
   \itemize{
     \item Correct two simple copy-and-paste errors in \code{RApiDatetime.h}
